--- a/resources/virtualnetwork.yaml
+++ b/resources/virtualnetwork.yaml
@@ -10,3 +10,25 @@ spec:
   addressSpace:
     addressPrefixes:
       - 10.0.0.0/16
+
+---
+apiVersion: network.azure.com/v1api20201101
+kind: VirtualNetworksSubnet
+metadata:
+  name: default
+  namespace: default
+spec:
+  owner:
+    name: samplevnet
+  addressPrefix: 10.0.0.0/24
+
+---
+apiVersion: network.azure.com/v1api20201101
+kind: VirtualNetworksSubnet
+metadata:
+  name: aks
+  namespace: default
+spec:
+  owner:
+    name: samplevnet
+  addressPrefix: 10.0.1.0/24
